--- a/QRInventory/MainWindow.xaml
+++ b/QRInventory/MainWindow.xaml
@@ -5,15 +5,18 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:QRInventory"
         mc:Ignorable="d"
-        Title="MainWindow" Height="620" Width="800">
+        Title="MainWindow" Height="720" Width="960">
 
     <Grid>
         <StackPanel>
-            <ComboBox x:Name="CbCameras" HorizontalAlignment="Left" Height="50" VerticalAlignment="Top" Width="400"/>
-            
-            <TextBox x:Name="tb" HorizontalAlignment="Left" Height="50" FontSize="24px" Text="TextBox" Width="800" Background="Gray"/>
-            <Image x:Name="imgQR" Height="300"/>
-            <Button x:Name="SCAN" Content="SCAN" Height="160" Width="800" Click="SCAN_Click"></Button>
+            <Button x:Name="SCAN" Content="SCAN" Height="100" Width="100" Click="SCAN_Click"></Button>
+            <Button x:Name="ADD" Content="ADD" Height="100" Width="100" Click="ADD_Click"></Button>
+            <TextBox x:Name="tbName" Height="30" FontSize="20"/>
+            <TextBox x:Name="tbBrand" Height="30" FontSize="20"/>
+            <TextBox x:Name="tbType" Height="30" FontSize="20"/>
+            <TextBox x:Name="tbDescription" Height="30" FontSize="20"/>
+            <TextBox x:Name="tbShort" Height="30" FontSize="20" Visibility="Hidden" />
+            <Button x:Name="SAVE" Content="SAVE" Height="50" Width="300" Click="SAVE_Click"></Button>
         </StackPanel>
     </Grid>
 </Window>
